specta-jsonschema/tests/snapshots/export__applies_serde_format.snap
---
source: specta-jsonschema/tests/export.rs
expression: schema
---
{
  "$defs": {
    "SerdeMessage": {
      "oneOf": [
        {
          "additionalProperties": false,
          "properties": {
            "data": {
              "additionalProperties": false,
              "properties": {
                "body": {
                  "type": "string"
                }
              },
              "required": [
                "body"
              ],
              "type": "object"
            },
            "type": {
              "const": "Text"
            }
          },
          "required": [
            "type",
            "data"
          ],
          "type": "object"
        },
        {
          "additionalProperties": false,
          "properties": {
            "data": {
              "maximum": 4294967295,
              "minimum": 0,
              "type": "integer"
            },
            "type": {
              "const": "Count"
            }
          },
          "required": [
            "type",
            "data"
          ],
          "type": "object"
        }
      ],
      "title": "SerdeMessage"
    },
    "SerdeUser": {
      "additionalProperties": false,
      "properties": {
        "fullName": {
          "type": "string"
        },
        "userId": {
          "maximum": 4294967295,
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "userId",
        "fullName"
      ],
      "title": "SerdeUser",
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema"
}
