specta-jsonschema/tests/snapshots/export__exports_draft7_tuple_syntax.snap
---
source: specta-jsonschema/tests/export.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "Collections": {
      "additionalProperties": false,
      "properties": {
        "map": {
          "additionalProperties": {
            "maximum": 4294967295,
            "minimum": 0,
            "type": "integer"
          },
          "type": "object"
        },
        "tags": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "tuple": {
          "additionalItems": false,
          "items": [
            {
              "type": "string"
            },
            {
              "maximum": 4294967295,
              "minimum": 0,
              "type": "integer"
            }
          ],
          "maxItems": 2,
          "minItems": 2,
          "type": "array"
        }
      },
      "required": [
        "tags",
        "tuple",
        "map"
      ],
      "title": "Collections",
      "type": "object"
    }
  }
}
