specta-jsonschema/tests/snapshots/export__exports_generic_instantiations.snap
---
source: specta-jsonschema/tests/export.rs
expression: schema
---
{
  "$defs": {
    "User": {
      "additionalProperties": false,
      "properties": {
        "email": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        },
        "id": {
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "name": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name",
        "email"
      ],
      "title": "User",
      "type": "object"
    },
    "UsesGenerics": {
      "additionalProperties": false,
      "properties": {
        "count": {
          "$ref": "#/$defs/Wrapper_u32"
        },
        "user": {
          "$ref": "#/$defs/Wrapper_User"
        }
      },
      "required": [
        "user",
        "count"
      ],
      "title": "UsesGenerics",
      "type": "object"
    },
    "Wrapper": {
      "additionalProperties": false,
      "properties": {
        "value": {}
      },
      "required": [
        "value"
      ],
      "title": "Wrapper",
      "type": "object"
    },
    "Wrapper_User": {
      "additionalProperties": false,
      "properties": {
        "value": {
          "$ref": "#/$defs/User"
        }
      },
      "required": [
        "value"
      ],
      "title": "Wrapper",
      "type": "object"
    },
    "Wrapper_u32": {
      "additionalProperties": false,
      "properties": {
        "value": {
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "value"
      ],
      "title": "Wrapper",
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema"
}
