specta-jsonschema/tests/snapshots/export__exports_metadata_and_primitives.snap
---
source: specta-jsonschema/tests/export.rs
expression: schema
---
{
  "$comment": "Generated by Specta",
  "$defs": {
    "Primitives": {
      "additionalProperties": false,
      "properties": {
        "bool_field": {
          "type": "boolean"
        },
        "char_field": {
          "maxLength": 1,
          "minLength": 1,
          "type": "string"
        },
        "f32_field": {
          "type": "number"
        },
        "f64_field": {
          "type": "number"
        },
        "i32_field": {
          "maximum": 2147483647,
          "minimum": -2147483648,
          "type": "integer"
        },
        "i8_field": {
          "maximum": 127,
          "minimum": -128,
          "type": "integer"
        },
        "string_field": {
          "type": "string"
        },
        "u16_field": {
          "maximum": 65535,
          "minimum": 0,
          "type": "integer"
        },
        "u64_field": {
          "maximum": 18446744073709551615,
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "bool_field",
        "string_field",
        "char_field",
        "i8_field",
        "u16_field",
        "i32_field",
        "u64_field",
        "f32_field",
        "f64_field"
      ],
      "title": "Primitives",
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Example schemas",
  "title": "Example"
}
