specta-jsonschema/tests/snapshots/export__exports_root_ref.snap
---
source: specta-jsonschema/tests/export.rs
expression: schema
---
{
  "$defs": {
    "User": {
      "additionalProperties": false,
      "properties": {
        "email": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        },
        "id": {
          "minimum": 0,
          "type": "integer"
        },
        "name": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name",
        "email"
      ],
      "title": "User",
      "type": "object"
    }
  },
  "$ref": "#/$defs/User",
  "$schema": "https://json-schema.org/draft/2020-12/schema"
}
